<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_grey_24dp"
            android:title="@string/navigation_settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_grey_24dp"
            android:title="@string/navigation_share" />
        <item
            android:id="@+id/nav_evaluate"
            android:icon="@drawable/ic_thumb_up_grey_24dp"
            android:title="@string/navigation_evaluate" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_grey_24dp"
            android:title="@string/navigation_about" />
    </group>



</menu>
